frontend: console: fix line wrapping
Lines would not break when they went out of bounds

--- a/frontend/src/pages/EditScript.css
+++ b/frontend/src/pages/EditScript.css
@@ -67,6 +67,7 @@
 
 .guild-console-message pre {
     margin: 0;
+    white-space: pre-wrap;
 }
 
 .guild-console-message:nth-of-type(odd) {
